app/public/assets/css/style.css
form {
    margin-left: 30px;
}
/* Turquoise Blue NEW */
/* Hex: #40E0D0 */
/* RGB: 64, 224, 208 */

/* Mint Green OLD */
/* #99ffdd */

/* Gray OLD */
/* #505050 */
.col-md-12 about1 {
    margin-top: 30px;
    padding: 50px;
    font-size: 25px;
}
#title{
    padding-top:50px;
    padding-bottom:100px;
    font-weight: 900;
    text-align: center;
    color: #40E0D0;
    font-family: monospace;
    font-size: 80px;
}
#contacttitle{
    padding-top:50px;
    padding-bottom:10px;
    font-weight: 900;
    text-align: center;
    color: #40E0D0;
    font-family: monospace;
    font-size: 80px;
}

.jumbotron{
    text-align: center;
    background: url(https://i.imgur.com/wQ5Yl6z.jpg);
    height: 100px;
    background-size: cover;
    background-position: center center;
    margin-bottom: 100px;
}

#welcome{
    padding-bottom: 100px;
    margin-top: 20px;
}
.display-4{
    margin-bottom: 30px;
}
#about-2{
    padding-top: 40px;
    background-color: #40E0D0;
    height: 400px;
    text-align: center;
}
#subt1{
    font-weight: 200;
    font-size: 50px;
    padding-top:40px;
    padding-left: 50px;
    color: white;
    font-weight: 200;
}
#subt2{
    font-weight: 200;
    font-size: 25px;
    padding-top:13px;
    padding-left: 50px;
    color: white;
    font-weight: 300;
}
#subt3{
    font-weight: 200;
    font-size: 15px;
    padding-top:50px;
    padding-left: 50px;
    color: #505050;
    font-weight: 300;
}
#about-4{
    background-color: #505050;
    height: 100px;
}
#contact-1{
    margin-bottom: 40px;
}
#contact-2{
    background-color: #505050;
    height: 100px;
}
#about-text{
    padding-top:80px;
    padding-bottom: 50px;
    font-weight: lighter;
}
.navbar-expand-lg{
    border-bottom:2px solid #D3D3D3;
}
#navbar{
    background-color:#505050;
    height: 75px;
    border-bottom: solid #40E0D0 7px;
    /* font-weight: 200; */
}

#navlink1, #navlink2, #navlink3{
    color:#40E0D0 !important;
    /* font-weight: 50 !important; */
    font-size: 20px;
    font-weight: 200; 
}

#nav-name{
    color:#40E0D0 !important;
    /* font-weight: 50 !important; */
    font-size: 20px;
    font-weight: 200; 
    padding-left: 75px;
}

#mainnavtxt{
    padding-left: 75px;
     color:#40E0D0 !important;
    font-weight: 250 !important;
    align-content: right;
}

#nav_links{
    padding-right: 75px;
}


#about1{
    text-align: left;
}

/* Portfolio */
#portfolio_title{
    font-weight: 200;
    padding-top: 150px;
    /* font-family: Arial, Helvetica, sans-serif; */
    font-size: 45px;
    padding-bottom: 150px;
    text-align: center;
    margin-left: 0px;
    margin-right: 0px;
    padding-left: 0px;
    color:#505050;
    
    
}
#pimg{
    margin-top:0;
}
#profimg{
    align-self: center;
    margin-top: 0px;
}

#proftext{
    align-content: center;
}
#portfoliorow-4{
    background-color: #505050;
    height: 100px;
}
.games1{
    padding-top:20px;
    padding-bottom: 50px;
   
}
.games2{
    padding-top:40px;
    padding-bottom: 30px;
    
}
.container
.row
.step-block
{
    text-align: center;
    font-family: "proxima-soft", sans-serif;

}
.fullpage{
    padding-left:2px;
    padding-right:2px;
    margin-right: 0px;
    margin-left: 0px;
    border:0;
    width:100%;
    align-items: center;
    align-self: center;
}
#portfolioRow1, 
#portfolioRow2,
#portfolioRow3
{
    text-align: center;
    color: black;
}
#portfolioRow1, 
#portfolioRow3
{
    background-color:#505050;
    border-bottom: solid 25px #40E0D0;
}
#portfolioRow2
{
    border-bottom: solid 25px #40E0D0;
    padding-bottom:150px;
}
#portfolioRow4
{
    background-color:#40E0D0; 
    padding-top:150px;
    padding-bottom: 200px;
}
#portfolio-row-4-second{
    margin-top:50px;
}
#heading1, #heading2, #heading3{
    padding:20px;
    padding-top:40px;
    font-weight: 200;
    font-size: 50px;
}
#heading1, #heading3{
    color:whitesmoke;
}
#heading2{
    color: #505050;
}
#heading4{
    padding:20px;
    padding-top:40px;
    font-size: 50px;
    color: #505050;
    font-weight: 300;
}
.sub-heading1{
    padding-top:20px;
    padding-bottom: 30px;
    margin-bottom: 50px;
    color: #D0D0D0;
    font-size: 30px;
    font-weight: 200;
}
.sub-heading2{
    padding-top:20px;
    padding-bottom: 30px;
    margin-bottom: 40px;
    color: #505050;
    font-size: 30px;
    font-weight: 200;
}
.sub-heading3{
    padding-top:20px;
    padding-bottom: 30px;
    margin-bottom: 20px;
    color:#505050;
    font-size: 25px;
    font-weight: 200;
}
.col1{
    align-content: center;
}
.portfolio_body{
    align-items: center;
    align-content: center;
}
#titlecol{
    text-align: center;
}
.port_item_react{
    padding-top:30px;
    padding-bottom: 5px;
    padding-right:3px;
    padding-left:3px;
    color:whitesmoke;
    font-weight: 400;
    font-size: 23px;
}
.port_item1{
    padding-top:30px;
    padding-bottom: 0px;
    padding-right:3px;
    padding-left:3px;
    color:#505050;
    font-weight: 250;
    font-size: 23px;
}
.port_item2{
    padding-top:5px;
    padding-bottom: 0px;
    margin-bottom: 1 px;
    padding-right:3px;
    padding-left:3px;
    font-weight: 500;
    color:white;
    font-size: 20px;
}
/* .port_item3{
    padding-top:30px;
    padding-bottom: 10px;
    padding-right:3px;
    padding-left:3px;
    font-weight: 200;
} */
.item_text_react{
    align-self: center;
    font-size: 20px;
    color: whitesmoke;
    font-weight: 200;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.item_text1{
    align-self: center;
    font-size: 20px;
    color: #505050;
    font-weight: 200;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 0px;
    margin-top: 0px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.sub_item_react{
    align-self: center;
    font-size: 17px;
    color: white;
    font-weight: 300;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 0px;
    margin-top: 0px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.sub_item_text1{
    align-self: center;
    font-size: 17px;
    color: #505050;
    font-weight: 300;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 0px;
    margin-top: 0px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.ptags{
    padding-right:10px;
    padding-left:10px;
    align-content: center;
}
.item_text2{
    font-size: 17px;
    align-self: center;
    font-weight: 200;
    align-self: center;
    margin-top:0px;
    margin-bottom: 70px;
    padding-left: 20px; 
    padding-right:20px;
    color: white;
}
.port_pic1{
    text-align: center;
    align-items: center;
    padding-top: 0px;
    border-radius: 25px;
    color: whitesmoke;
    
}
.port_pic2{
    text-align: center;
    align-items: center;
    padding-top: 0px;
    border-radius: 25px;
    color: #909090;
    
    
}
.port-pic2{
    width: 200px;
    align-content: center;
}
#hungry{
    border:1px solid #ffa500;
    
}
#trains{
    border:1px solid cornflowerblue;
}

.games1
{
    padding-bottom: 150px;
}
.games2{
    padding-top: 150px;
}

